<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/champions_back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    android:background="@color/colorPrimary"
    android:gravity="center_vertical|center_horizontal">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="113dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/usuario" />

    <EditText
        android:id="@+id/edit_cadastro_nome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="121dp"
        android:ems="10"
        android:hint="@string/digite_nome"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_cadastro_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_cadastro_nome"
        android:ems="10"
        android:hint="@string/digite_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_cadastro_senha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_cadastro_email"
        android:ems="10"
        android:hint="@string/digite_senha"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bt_cadastrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_cadastro_senha"
        android:layout_marginTop="32dp"
        android:text="@string/botao_cadastrar"
        android:theme="@style/botaoPadrao" />
</RelativeLayout>

